--- a/add-contact.html
+++ b/add-contact.html
@@ -6,18 +6,18 @@
 </head>
 <body>
     <br/>
-    <form id="editForm">
+    <form id="addForm">
         <label for="firstname">First Name:</label>
-        <input type="text" id="firstname" name="firstname"><br/>
+        <input type="text" id="firstname" name="firstname" required><br/>
 
         <label for="lastname">Last Name:</label>
-        <input type="text" id="lastname" name="lastname"><br/>
+        <input type="text" id="lastname" name="lastname" required><br/>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email"><br/>
+        <input type="email" id="email" name="email" required><br/>
 
         <label for="mobile">Mobile:</label>
-        <input type="text" id="mobile" name="mobile"><br/>
+        <input type="text" id="mobile" name="mobile" required><br/>
 
         <label for="avatar">Select a file</label>
         <input type="file" name="avatar" id="avatar"><br/>
@@ -28,20 +28,21 @@
     <button id="homeLink" type="button">Home</button>
 
     <script src="config.js"></script>
-
     <script>
         // Wait for DOM to load
         document.addEventListener("DOMContentLoaded", function () {
-            document.getElementById("editForm").addEventListener("submit", submitForm);
+            document.getElementById("addForm").addEventListener("submit", submitForm);
             document.getElementById("homeLink").addEventListener("click", homeLink);
         });
 
         function submitForm(e) {
             e.preventDefault();
 
-            const form = new FormData(document.querySelector("#editForm"));
+            // Create a FormData object from the form
+            const form = new FormData(document.querySelector("#addForm"));
             form.append("apiKey", apiKey);
 
+            // Send the form data to the server
             fetch(rootPath + 'controller/insert-contact/', {
                 method: "POST",
                 headers: { 'Accept': 'application/json, *.*' },
@@ -51,12 +52,12 @@
                 return response.text();
             })
             .then(function (data) {
+                // Check the response from the server
                 if (data == "1") {
                     alert("Contact added successfully!");
                     homeLink();
                 } else {
                     alert("Error: " + data);
-                    homeLink();
                 }
             });
         }
@@ -64,8 +65,6 @@
         function homeLink() {
             window.open("index.html", "_self");
         }
-
-        
     </script>
 </body>
 </html>
