--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 
     <script src="config.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            // Add event listeners
-            document.getElementById("refresh").addEventListener('click', fetchContacts);
-            document.getElementById("addContact").addEventListener('click', addContact);
-
-            // Load contacts on page load
-            fetchContacts();
-        });
+    document.addEventListener("DOMContentLoaded", function() {
+        // Add event listeners
+        document.getElementById("refresh").addEventListener('click', fetchContacts);
+        document.getElementById("addContact").addEventListener('click', addContact);
 
         function fetchContacts() {
             fetch(rootPath + "controller/get-contacts/")
@@ -28,37 +24,45 @@
                 })
                 .then(function (data) {
                     displayOutput(data);
-                })
-                .catch(function (error) {
-                    document.getElementById("table").innerHTML = "Error loading contacts.";
-                    console.error("Fetch error:", error);
                 });
         }
 
         function displayOutput(data) {
-            let output = "<table>";
-
+            let output = "<table id='contactsTable'>";
             for (let a in data) {
                 output += `
-                    <tr onclick="editContact(${data[a].id})">
+                    <tr data-id="${data[a].id}">
                         <td><img src="${rootPath}controller/uploads/${data[a].avatar}" width="40" alt="avatar" /></td>
                         <td><h5>${data[a].firstname}</h5></td>
                         <td><h5>${data[a].lastname}</h5></td>
                     </tr>
                 `;
             }
-
             output += "</table>";
             document.getElementById("table").innerHTML = output;
+            // Add event delegation for row clicks
+            const contactsTable = document.getElementById('contactsTable');
+            if (contactsTable) {
+                contactsTable.addEventListener('click', function(e) {
+                    let tr = e.target.closest('tr[data-id]');
+                    if (tr) {
+                        editContact(tr.getAttribute('data-id'));
+                    }
+                });
+            }
         }
 
         function addContact() {
             window.open("add-contact.html", "_self");
         }
 
-        function editContact (id) {
+        function editContact(id) {
             window.open("edit-contact.html?id=" + id, "_self");
         }
+
+        // Initial load of contacts when page loads
+        fetchContacts();
+    });
     </script>
 </body>
 </html>
